force-app/main/default/objects/VSOE_Pricing_Item__c/VSOE_Pricing_Item__c.object-meta.xml
<CustomObject>
    <label>VSOE Pricing Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>VSOE Pricing Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VSOE Pricing Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>