force-app/main/default/objects/VSOE_Pricing_Item__c/fields/CSD_RSD__c.field-meta.xml
<CustomField>
    <fullName>CSD_RSD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSD / RSD</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>VSOE Pricing Items</relationshipLabel>
    <relationshipName>VSOE_Pricing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>