force-app/main/default/objects/VSOE_Pricing_Item__c/fields/VSOE_Pricing_Year__c.field-meta.xml
<CustomField>
    <fullName>VSOE_Pricing_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VSOE Pricing Year</label>
    <referenceTo>VSOE_Pricing_Year__c</referenceTo>
    <relationshipLabel>VSOE Pricing Items</relationshipLabel>
    <relationshipName>VSOE_Pricing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>